feat: add 3D drone model, TOD lighting, and move controls to left
- Added 3D drone GLB model rendering instead of simple points
- Drone models now rotate based on heading direction
- Added Time of Day controls (Real-time, Day, Night)
- Added globe lighting toggle with SunLight for 3D tiles
- Moved camera/TOD controls panel from right to left side
- Added static folder volume mount in docker-compose for assets
- Added dynamicAtmosphereLighting for sun-based globe shading

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,5 +35,6 @@ services:
       - tile38
     volumes:
       - ./views:/usr/src/app/views # Mount local views for live editing
+      - ./static:/usr/src/app/static # Mount static assets including 3D models
     ports:
       - "5050:5050"
